# classes-diagram-creator

./: README.md  class-diagram-creator-cytoscape-faster.py  class-diagram-creator-matplotlib-slower.py  class-diagram-creator.py  pyproject.toml
assets/: clientside.js
old/: class-diagram-creator-old01.py  clientside.js  localizar_texto.py  teste.txt
