[project]
name = "class-diagram-creator"
version = "0.1.0"
description = ""
authors = [
    {name = "Josué",email = "josueamaral15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dash-cytoscape (>=1.0.2,<2.0.0)",
    "dash (>=3.1.1,<4.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyqt6-webengine (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
